# const-twiddle

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
