[package]
name = "const-twiddle"
authors = ["griffi-gh <prasol258@gmail.com>"]
description = "Bitwise utility functions"
repository = "https://github.com/griffi-gh/const-twiddle/"
version = "0.0.2"
edition = "2021"
license = "MIT"
keywords = ["bitwise", "bit", "bits", "twiddle", "no-std"]
categories = ["no-std", "no-std::no-alloc"]
readme = "README.md"
include = [
  "/src/**/*.rs",
  "/build.rs",
  "/Cargo.toml",
]

[dependencies]
paste = "1.0"
